add httpd config
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434207 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -1,1 +1,233 @@
-#TODO
+Listen vote.apache.org:443
+Timeout 60
+KeepAlive on
+MaxKeepAliveRequests 100
+KeepAliveTimeout 3
+<IfModule prefork.c>
+    StartServers          5
+    MinSpareServers       5
+    MaxSpareServers      10
+    MaxClients          250
+    MaxRequestsPerChild   0
+</IfModule>
+<IfModule worker.c>
+    StartServers          2
+    MaxClients          150
+    MinSpareThreads      25
+    MaxSpareThreads      75 
+    ThreadsPerChild      25
+    MaxRequestsPerChild   0
+</IfModule>
+<IfModule event.c>
+    StartServers          2
+    MaxClients          150
+    MinSpareThreads      25
+    MaxSpareThreads      75 
+    ThreadsPerChild      25
+    MaxRequestsPerChild   0
+</IfModule>
+ExtendedStatus On
+
+User  voter
+Group daemon
+
+ServerAdmin infrastructure@apache.org
+ServerRoot /home/voter/www
+UseCanonicalName Off
+
+AddType application/x-x509-ca-cert .crt
+AddType application/x-pkcs7-crl    .crl
+
+SSLEngine on
+SSLProtocol -ALL +SSLv3 +TLSv1
+SSLCipherSuite ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:-LOW:-SSLv2:-EXP
+SSLCertificateFile /etc/ap-ssl/wildcard.apache.crt
+SSLCertificateKeyFile /etc/ap-ssl/wildcard.apache.key
+
+ServerName vote.apache.org
+DocumentRoot "/home/voter/www/htdocs"
+
+<Directory "/home/voter/www/htdocs">
+    Options Indexes FollowSymLinks Multiviews ExecCGI
+    AllowOverride All
+    Order allow,deny
+    Allow from all
+</Directory>
+
+<IfModule mod_dir.c>
+    DirectoryIndex index.html index.html.var
+</IfModule>
+
+AccessFileName .htaccess
+
+<Files ~ "^\.ht">
+    Order allow,deny
+    Deny from all
+</Files>
+
+<IfModule mod_mime.c>
+    TypesConfig conf/mime.types
+</IfModule>
+
+DefaultType text/plain
+
+<IfModule mod_mime_magic.c>
+    MIMEMagicFile conf/magic
+</IfModule>
+
+HostnameLookups Off
+
+<IfModule mod_log_config.c>
+    LogFormat "%h %l %>s %b \"%{User-Agent}i\"" voter
+    CustomLog /home/voter/www/logs/voter_log voter
+</IfModule>
+
+ServerTokens Full
+ServerSignature On
+
+<IfModule mod_alias.c>
+    Alias /icons/ "/usr/local/apache2-install/people.apache.org/current/icons/"
+
+    <Directory "/usr/local/apache2-install/people.apache.org/current/icons">
+        Options Indexes MultiViews
+        AllowOverride None
+        Order allow,deny
+        Allow from all
+    </Directory>
+
+    ScriptAlias /cast "/home/voter/www/cgi-bin/cast-vote.pl"
+
+</IfModule>
+
+<IfModule mod_autoindex.c>
+    IndexOptions FancyIndexing VersionSort NameWidth=*
+
+    AddIconByEncoding (CMP,/icons/compressed.gif) x-compress x-gzip
+
+    AddIconByType (TXT,/icons/text.gif) text/*
+    AddIconByType (IMG,/icons/image2.gif) image/*
+    AddIconByType (SND,/icons/sound2.gif) audio/*
+    AddIconByType (VID,/icons/movie.gif) video/*
+
+    AddIcon /icons/binary.gif .bin .exe
+    AddIcon /icons/binhex.gif .hqx
+    AddIcon /icons/tar.gif .tar
+    AddIcon /icons/world2.gif .wrl .wrl.gz .vrml .vrm .iv
+    AddIcon /icons/compressed.gif .Z .z .tgz .gz .zip
+    AddIcon /icons/a.gif .ps .ai .eps
+    AddIcon /icons/layout.gif .html .shtml .htm .pdf
+    AddIcon /icons/text.gif .txt
+    AddIcon /icons/c.gif .c
+    AddIcon /icons/p.gif .pl .py
+    AddIcon /icons/f.gif .for
+    AddIcon /icons/dvi.gif .dvi
+    AddIcon /icons/uuencoded.gif .uu
+    AddIcon /icons/script.gif .conf .sh .shar .csh .ksh .tcl
+    AddIcon /icons/tex.gif .tex
+    AddIcon /icons/bomb.gif .core
+
+    AddIcon /icons/back.gif ..
+    AddIcon /icons/hand.right.gif README
+    AddIcon /icons/folder.gif ^^DIRECTORY^^
+    AddIcon /icons/blank.gif ^^BLANKICON^^
+
+    DefaultIcon /icons/unknown.gif
+
+    ReadmeName README.html
+    HeaderName HEADER.html
+    IndexIgnore .??* *~ *# HEADER* README* RCS CVS *,v *,t
+</IfModule>
+
+<IfModule mod_mime.c>
+
+    AddType application/x-compress .Z
+    AddType application/x-gzip .gz .tgz
+
+    AddLanguage ca .ca
+    AddLanguage cs .cz .cs
+    AddLanguage da .dk
+    AddLanguage de .de
+    AddLanguage el .el
+    AddLanguage en .en
+    AddLanguage eo .eo
+    AddLanguage es .es
+    AddLanguage et .et
+    AddLanguage fr .fr
+    AddLanguage he .he
+    AddLanguage hr .hr
+    AddLanguage it .it
+    AddLanguage ja .ja
+    AddLanguage ko .ko
+    AddLanguage ltz .ltz
+    AddLanguage nl .nl
+    AddLanguage nn .nn
+    AddLanguage no .no
+    AddLanguage pl .po
+    AddLanguage pt .pt
+    AddLanguage pt-BR .pt-br
+    AddLanguage ru .ru
+    AddLanguage sv .sv
+    AddLanguage zh-CN .zh-cn
+    AddLanguage zh-TW .zh-tw
+</IfModule>
+
+<IfModule mod_negotiation.c>
+    LanguagePriority en ca cs da de el eo es et fr he hr it ja ko ltz nl nn no pl pt pt-BR ru sv zh-CN zh-TW
+    ForceLanguagePriority Prefer Fallback
+</IfModule>
+
+<IfModule mod_mime.c>
+    AddCharset ISO-8859-1  .iso8859-1  .latin1
+    AddCharset ISO-8859-2  .iso8859-2  .latin2 .cen
+    AddCharset ISO-8859-3  .iso8859-3  .latin3
+    AddCharset ISO-8859-4  .iso8859-4  .latin4
+    AddCharset ISO-8859-5  .iso8859-5  .latin5 .cyr .iso-ru
+    AddCharset ISO-8859-6  .iso8859-6  .latin6 .arb
+    AddCharset ISO-8859-7  .iso8859-7  .latin7 .grk
+    AddCharset ISO-8859-8  .iso8859-8  .latin8 .heb
+    AddCharset ISO-8859-9  .iso8859-9  .latin9 .trk
+    AddCharset ISO-2022-JP .iso2022-jp .jis
+    AddCharset ISO-2022-KR .iso2022-kr .kis
+    AddCharset ISO-2022-CN .iso2022-cn .cis
+    AddCharset Big5        .Big5       .big5
+    # For russian, more than one charset is used (depends on client, mostly):
+    AddCharset WINDOWS-1251 .cp-1251   .win-1251
+    AddCharset CP866       .cp866
+    AddCharset KOI8-r      .koi8-r .koi8-ru
+    AddCharset KOI8-ru     .koi8-uk .ua
+    AddCharset ISO-10646-UCS-2 .ucs2
+    AddCharset ISO-10646-UCS-4 .ucs4
+    AddCharset UTF-8       .utf8
+
+    AddCharset GB2312      .gb2312 .gb 
+    AddCharset utf-7       .utf7
+    AddCharset utf-8       .utf8
+    AddCharset big5        .big5 .b5
+    AddCharset EUC-TW      .euc-tw
+    AddCharset EUC-JP      .euc-jp
+    AddCharset EUC-KR      .euc-kr
+    AddCharset shift_jis   .sjis
+
+    AddHandler cgi-script .cgi
+    AddHandler cgi-script .pl
+
+    AddHandler send-as-is asis
+    AddHandler type-map var
+
+    #AddType text/html .shtml
+    #AddOutputFilter INCLUDES .shtml
+</IfModule>
+
+<IfModule mod_setenvif.c>
+    BrowserMatch "Mozilla/2" nokeepalive
+    BrowserMatch "MSIE 4\.0b2;" nokeepalive downgrade-1.0 force-response-1.0
+    BrowserMatch "RealPlayer 4\.0" force-response-1.0
+    BrowserMatch "Java/1\.0" force-response-1.0
+    BrowserMatch "JDK/1\.0" force-response-1.0
+
+    BrowserMatch "Microsoft Data Access Internet Publishing Provider" redirect-carefully
+    BrowserMatch "^WebDrive" redirect-carefully
+    BrowserMatch "^WebDAVFS/1.[012]" redirect-carefully
+    BrowserMatch "^gnome-vfs/1.0" redirect-carefully
+</IfModule>
+
