--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -26,10 +26,14 @@ KeepAliveTimeout 3
     ThreadsPerChild      25
     MaxRequestsPerChild   0
 </IfModule>
+
 ExtendedStatus On
 
 User  voter
 Group daemon
+
+LoadModule /usr/local/apache2-install/people.apache.org/current/modules/mod_authnz_ldap.so
+LoadModule /usr/local/apache2-install/people.apache.org/current/modules/mod_ssl.so
 
 ServerAdmin infrastructure@apache.org
 ServerRoot /home/voter/www
@@ -231,3 +235,20 @@ ServerSignature On
     BrowserMatch "^gnome-vfs/1.0" redirect-carefully
 </IfModule>
 
+<IfModule mod_authnz_ldap.c>
+    AuthLDAPurl "ldaps://localhost:636/ou=people,dc=apache,dc=org?uid"
+    AuthLDAPBindDN cn=httpduser,ou=users,ou=services,dc=apache,dc=org
+    #Include the password from a file in /root/ap-ldap
+    Include /root/ap-ldap/httpd-ldap.conf
+    AuthLDAPRemoteUserAttribute uid
+    AuthzLDAPAuthoritative off
+</IfModule>
+
+<Directory /home/voter/www/cgi-bin>
+    Options ExecCGI
+    AuthName "ASF Committers"
+    AuthType Basic
+    AuthBasicProvider ldap file
+    AuthUserFile /home/voter/www/conf/asf-nonldap-users
+    Require valid-user
+</Directory>
