pidfile. don't need extendedstatus because we can't run mod_status here
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434212 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -27,7 +27,7 @@ KeepAliveTimeout 3
     MaxRequestsPerChild   0
 </IfModule>
 
-ExtendedStatus On
+PidFile /var/run/httpd-vote.apache.org.pid
 
 User  voter
 Group daemon
