--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -32,8 +32,8 @@ PidFile /var/run/httpd-vote.apache.org.pid
 User  voter
 Group daemon
 
-LoadModule /usr/local/apache2-install/people.apache.org/current/modules/mod_authnz_ldap.so
-LoadModule /usr/local/apache2-install/people.apache.org/current/modules/mod_ssl.so
+LoadModule authnz_ldap_module /usr/local/apache2-install/people.apache.org/current/modules/mod_authnz_ldap.so
+LoadModule ssl_module /usr/local/apache2-install/people.apache.org/current/modules/mod_ssl.so
 
 ServerAdmin infrastructure@apache.org
 ServerRoot /home/voter/www
