--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -82,7 +82,7 @@ DefaultType text/plain
 HostnameLookups Off
 
 <IfModule mod_log_config.c>
-    LogFormat "%h %l %>s %b \"%{User-Agent}i\"" voter
+    LogFormat "%t %h %m \"%f\" %>s %b \"%{User-Agent}i\"" voter
     CustomLog /home/voter/www/logs/voter_log voter
 </IfModule>
 
