drop timestamps: TMI
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434277 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -82,7 +82,7 @@ DefaultType text/plain
 HostnameLookups Off
 
 <IfModule mod_log_config.c>
-    LogFormat "%t %h %m \"%f\" %>s %b \"%{User-Agent}i\"" voter
+    LogFormat "%h %m \"%f\" %>s %b \"%{User-Agent}i\"" voter
     CustomLog /home/voter/www/logs/voter_log voter
 </IfModule>
 
