--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -42,11 +42,13 @@ UseCanonicalName Off
 AddType application/x-x509-ca-cert .crt
 AddType application/x-pkcs7-crl    .crl
 
-SSLEngine on
-SSLProtocol -ALL +SSLv3 +TLSv1
-SSLCipherSuite ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:-LOW:-SSLv2:-EXP
-SSLCertificateFile /etc/ap-ssl/wildcard.apache.crt
-SSLCertificateKeyFile /etc/ap-ssl/wildcard.apache.key
+SSLEngine                on
+SSLProtocol              -ALL +SSLv3 +TLSv1
+SSLCipherSuite           ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:-LOW:-SSLv2:-EXP
+SSLCertificateFile       /etc/ap-ssl/wildcard.apache.crt
+SSLCertificateKeyFile    /etc/ap-ssl/wildcard.apache.key
+SSLSessionCache          dbm:logs/ssl_scache
+SSLSessionCacheTimeout   300
 
 ServerName vote.apache.org
 DocumentRoot "/home/voter/www/htdocs"
