add embedded link support
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434301 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -102,6 +102,7 @@ ServerSignature On
     </Directory>
 
     ScriptAlias /cast "/home/voter/www/cgi-bin/cast-vote.pl"
+    ScriptAlias /redirect "/home/voter/www/cgi-bin/redirect.pl"
 
 </IfModule>
 
