--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -47,6 +47,7 @@ SSLProtocol              -ALL +SSLv3 +TLSv1
 SSLCipherSuite           ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:-LOW:-SSLv2:-EXP
 SSLCertificateFile       /etc/ap-ssl/wildcard.apache.crt
 SSLCertificateKeyFile    /etc/ap-ssl/wildcard.apache.key
+SSLCertificateChainFile  /etc/ap-ssl/Thawte-SSL_CA_Bundle.pem
 SSLSessionCache          dbm:logs/ssl_scache
 SSLSessionCacheTimeout   300
 
