Allow for clean
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1597089 13f79535-47bb-0310-9956-ffa450edef68

--- a/cmdline/Makefile
+++ b/cmdline/Makefile
@@ -28,6 +28,9 @@ check_quorum: wrapsuid.c
 	$(CC) -DPROGNAME=\"$(INSTALLBIN)/check_quorum.pl\" $(SUIDS) \
 	      -o check_quorum wrapsuid.c
 
+clean:
+	rm -f votegroup make_issue vote close_issue reminder check_quorum
+
 install: check-directory        \
 	install-votegroup       \
 	install-make_issue      \
