--- a/www/conf/httpd.conf
+++ b/www/conf/httpd.conf
@@ -241,7 +241,7 @@ ServerSignature On
 
 
 <Directory /home/voter/www/cgi-bin>
-    AuthLDAPurl "ldaps://minotaur.apache.org:636/ou=people,dc=apache,dc=org?uid"
+    AuthLDAPurl "ldaps://ldap1-us-west.apache.org:636/ou=people,dc=apache,dc=org?uid"
     AuthLDAPRemoteUserAttribute uid
     AuthzLDAPAuthoritative off
 
