Some updates: - rearrange some auth checks and JSON grabs, so we can lock off the admin section - add auth example to httpd.conf - add email config to steve.cfg
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk/pytest@1668171 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpd.conf
+++ b/httpd.conf
@@ -19,4 +19,13 @@ ScriptAlias /steve/voter /home/voter/pytest/www/cgi-bin/rest_voter.py
 ScriptAlias /steve/ballot /home/voter/pytest/www/cgi-bin/html_ballot.py
 ScriptAlias /steve/election /home/voter/pytest/www/cgi-bin/html_election.py
 
+<Location /steve/admin>
+    AuthType Basic
+    AuthName "STeVe administration"
+
+    AuthBasicProvider file
+    AuthUserFile /home/voter/.htpasswd
+    Require valid-user
+</Location>
+
 </VirtualHost>
