--- a/steve.cfg
+++ b/steve.cfg
@@ -6,3 +6,9 @@ homedir:            /home/voter
 admin:            5
 chairman:         4
 monitorperson:    3
+
+
+[email]
+sender:                     no-reply@steve.apache.org
+signature:                  Apache STEVe
+mta:                        localhost
