Some updates: - rearrange some auth checks and JSON grabs, so we can lock off the admin section - add auth example to httpd.conf - add email config to steve.cfg
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668171 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/steve.cfg
+++ b/pytest/steve.cfg
@@ -6,3 +6,9 @@ homedir:            /home/voter
 admin:            5
 chairman:         4
 monitorperson:    3
+
+
+[email]
+sender:                     no-reply@steve.apache.org
+signature:                  Apache STEVe
+mta:                        localhost
