--- a/pytest/httpd.conf
+++ b/pytest/httpd.conf
@@ -19,4 +19,13 @@ ScriptAlias /steve/voter /home/voter/pytest/www/cgi-bin/rest_voter.py
 ScriptAlias /steve/ballot /home/voter/pytest/www/cgi-bin/html_ballot.py
 ScriptAlias /steve/election /home/voter/pytest/www/cgi-bin/html_election.py
 
+<Location /steve/admin>
+    AuthType Basic
+    AuthName "STeVe administration"
+
+    AuthBasicProvider file
+    AuthUserFile /home/voter/.htpasswd
+    Require valid-user
+</Location>
+
 </VirtualHost>
