--- a/steve.cfg
+++ b/steve.cfg
@@ -10,6 +10,6 @@ monitorperson:    3
 
 
 [email]
-sender:                     no-reply@steve.apache.org
+sender:                     no-reply@stv.website
 signature:                  Apache STEVe
 mta:                        localhost
