fix sample config, update rest doc
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668404 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/steve.cfg
+++ b/pytest/steve.cfg
@@ -10,6 +10,6 @@ monitorperson:    3
 
 
 [email]
-sender:                     no-reply@steve.apache.org
+sender:                     no-reply@stv.website
 signature:                  Apache STEVe
 mta:                        localhost
