default lurk to yes in sample config
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1669108 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/steve.cfg
+++ b/pysteve/steve.cfg
@@ -2,6 +2,7 @@
 
 homedir:            /home/voter
 rooturl:            http://demo.stv.website
+lurk:               yes
 
 [karma]
 admin:            5
