--- a/steve.cfg
+++ b/steve.cfg
@@ -2,6 +2,7 @@
 
 homedir:            /home/voter
 rooturl:            http://demo.stv.website
+lurk:               yes
 
 [karma]
 admin:            5
