--- a/steve.cfg
+++ b/steve.cfg
@@ -4,6 +4,11 @@ homedir:            /home/voter
 rooturl:            http://demo.stv.website
 lurk:               yes
 
+
+[database]
+dbsys:              file
+
+
 [karma]
 admin:            5
 chairman:         4
