Allow for other ways of fetching vote data in the future (ElasticSearch anyone??)
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1669142 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/steve.cfg
+++ b/pysteve/steve.cfg
@@ -4,6 +4,11 @@ homedir:            /home/voter
 rooturl:            http://demo.stv.website
 lurk:               yes
 
+
+[database]
+dbsys:              file
+
+
 [karma]
 admin:            5
 chairman:         4
