--- a/pysteve/steve.cfg
+++ b/pysteve/steve.cfg
@@ -6,7 +6,15 @@ lurk:               yes
 
 
 [database]
+# Change dbsys to "elasticsearch" to use ES instead of file-based db
 dbsys:              file
+
+
+[elasticsearch]
+host:               localhost
+uri:                
+secure:             false
+port:               9200
 
 
 [karma]
