--- a/pysteve/httpd.conf
+++ b/pysteve/httpd.conf
@@ -2,30 +2,31 @@
 # see http://stv.website/steve/voter/view/foo for an example.
 
 <VirtualHost *:80>
-DocumentRoot /home/voter/pytest/www/htdocs
+DocumentRoot /var/www/steve/www/htdocs
 ServerName stv.website
 DirectoryIndex index.html
-<Directory /home/voter/pytest/www>
+<Directory /var/www/steve/www/cgi-bin/>
   Require all granted
   Options +ExecCGI
   AddHandler cgi-script .py
 </Directory>
 
 # REST API
-ScriptAlias /steve/admin /home/voter/pytest//www/cgi-bin/rest_admin.py
-ScriptAlias /steve/voter /home/voter/pytest/www/cgi-bin/rest_voter.py
+ScriptAlias /steve/admin /var/www/steve/www/cgi-bin/rest_admin.py
+ScriptAlias /steve/voter /var/www/steve/www/cgi-bin/rest_voter.py
 
 # HTML generators
-ScriptAlias /steve/ballot /home/voter/pytest/www/cgi-bin/html_ballot.py
-ScriptAlias /steve/election /home/voter/pytest/www/cgi-bin/html_election.py
+ScriptAlias /steve/ballot /var/www/steve/www/cgi-bin/html_ballot.py
+ScriptAlias /steve/election /var/www/steve/www/cgi-bin/html_election.py
 
 <Location /steve/admin>
     AuthType Basic
     AuthName "STeVe administration"
 
     AuthBasicProvider file
-    AuthUserFile /home/voter/.htpasswd
+    AuthUserFile /var/www/steve/.htpasswd
     Require valid-user
 </Location>
 
 </VirtualHost>
+
