--- a/pysteve/httpd.conf
+++ b/pysteve/httpd.conf
@@ -23,8 +23,9 @@ ScriptAlias /steve/election /var/www/steve/www/cgi-bin/html_election.py
     AuthType Basic
     AuthName "STeVe administration"
 
+    # CHANGE THIS TO YOUR REAL ACCESS FILE/SCHEME
     AuthBasicProvider file
-    AuthUserFile /var/www/steve/.htpasswd
+    AuthUserFile /var/www/steve/htpasswd-example
     Require valid-user
 </Location>
 
