Adding a default admin htpassword: admin/admin1234 for testing.
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk/pysteve@1718385 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpd.conf
+++ b/httpd.conf
@@ -23,8 +23,9 @@ ScriptAlias /steve/election /var/www/steve/www/cgi-bin/html_election.py
     AuthType Basic
     AuthName "STeVe administration"
 
+    # CHANGE THIS TO YOUR REAL ACCESS FILE/SCHEME
     AuthBasicProvider file
-    AuthUserFile /var/www/steve/.htpasswd
+    AuthUserFile /var/www/steve/htpasswd-example
     Require valid-user
 </Location>
 
