--- a/steve.cfg
+++ b/steve.cfg
@@ -6,8 +6,9 @@ lurk:               yes
 
 
 [database]
+# Change dbsys to "file" to use file-based db
 # Change dbsys to "elasticsearch" to use ES instead of file-based db
-dbsys:              file
+dbsys:              elasticsearch
 
 
 [elasticsearch]
