default to ES, to make docker happy.
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1718392 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/steve.cfg
+++ b/pysteve/steve.cfg
@@ -6,8 +6,9 @@ lurk:               yes
 
 
 [database]
+# Change dbsys to "file" to use file-based db
 # Change dbsys to "elasticsearch" to use ES instead of file-based db
-dbsys:              file
+dbsys:              elasticsearch
 
 
 [elasticsearch]
