well now y'all know where I copied that from :)
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk/pysteve@1718395 13f79535-47bb-0310-9956-ffa450edef68

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,7 +29,7 @@ RUN rm /etc/apache2/sites-enabled/*.conf
 ADD https://svn.apache.org/repos/asf/steve/trunk/pysteve/httpd.conf /etc/apache2/sites-enabled/000-default.conf
 
 
-# Start ElasticSearch, set up Pony Mail
+# Start ElasticSearch
 EXPOSE 9200 9300
 RUN service elasticsearch start && sleep 30 && service elasticsearch status
 
