--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,3 +1,4 @@
-# publish this branch to steve.apache.org
+# Pelican pushes generated content to this branch.
+# Then, publish to steve.apache.org
 publish:
   whoami: asf-site
