--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,5 +1,3 @@
-# Pelican pushes generated content to this branch.
-# Then, publish to steve.apache.org
-### don't publish just yet. verify Pelican output first.
-#publish:
-#  whoami: asf-site
+staging:
+  profile: ~
+  whoami:  asf-staging
